<resources>
    <string name="app_name">qr</string>
    <string name="register_tittle">Register</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="edittext_name">Name</string>
    <string name="edittext_email">Email</string>
    <string name="edittext_password">Password</string>

</resources>
