<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layoututama"
    tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutedittext1">

    <TextView
        android:id="@+id/textviewregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_tittle"
        android:textSize="35sp"
        android:textColor="#000000"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"/>
    <EditText
    android:id="@+id/editname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textviewregis"
    android:hint="@string/edittext_name"
    android:textSize="20sp"

    />

    <TextView
        android:id="@+id/error_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editname"
        android:textColor="@color/colorRed" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_name"
        android:hint="@string/edittext_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editemail"
        android:textColor="@color/colorRed" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_email"
        android:hint="@string/edittext_password"
        android:inputType="textPassword"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editpassword"
        android:textColor="@color/colorRed" />
</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutgender"
    android:orientation="horizontal">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_button"
        android:orientation="horizontal">
    <TextView
       android:id="@+id/textgender"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/editpassword"
       android:text="@string/gender"
       android:textColor="#000000"
       android:textSize="21sp"  />
            <RadioButton
             android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_female" />
    </RadioGroup>
</LinearLayout>
    <TextView
        android:id="@+id/error_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorRed" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#009688"
            android:text="@string/submit"
            android:textColor="#FFFFFF" />
</LinearLayout>
</LinearLayout>